# goldy-example-plugin

./: .gitignore  README.md  pyproject.toml
goldy_plugin/: __init__.py  scraper.py
