[project]
name = "goldy-plugin"
description = "A mov-cli v4 plugin for watching whatever you desire. 🌟"
authors = [
    {name = "Goldy", email = "goldy@devgoldy.xyz"} # Just an example, replace this with your name and email.
]
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = [
    "mov-cli",
    "amazing plugin" # example
]
classifiers = [
    'Operating System :: Microsoft :: Windows :: Windows 11',
    'Operating System :: Microsoft :: Windows :: Windows 10',
    'Operating System :: POSIX :: Linux',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12'
]
dependencies = [
    "requests",
    "importlib-metadata; python_version<'3.8'",

    "mov-cli>=4.4alpha5-1"
]

dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "ruff",
    "build"
]

[tool.setuptools.dynamic]
version = { attr = "goldy_plugin.__version__" }

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["goldy_plugin*"]

[tool.setuptools.package-data]
"goldy_plugin" = ["videos/*"]